<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 Mobvoi Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/new_item"
          android:icon="@drawable/ic_about"
          android:title="@string/category_menu_hint_create" />
    <item android:id="@+id/open"
          android:icon="@drawable/ic_update"
          android:title="@string/category_menu_hint_open" />
    <item android:id="@+id/edit"
          android:icon="@drawable/ic_developer"
          android:title="@string/category_menu_hint_edit" />
    <item android:id="@+id/share"
          android:icon="@drawable/ic_gps"
          android:title="@string/category_menu_hint_share" />
    <item android:id="@+id/delete"
          android:icon="@drawable/ic_batterysave"
          android:title="@string/category_menu_hint_delete" />
</menu>