<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 Mobvoi Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.Ticwear.ListView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:nestedScrollingEnabled="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            style="@style/TextAppearance.Ticwear.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/spec_text_size_line_height"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="#aaffffff"
            />

        <TextView
            style="@style/TextAppearance.Ticwear.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:singleLine="true"
            android:text="@string/spec_text_size_base"
            />

        <include
            layout="@layout/dialog_spec_text_base_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="#aaffffff"
            />

        <TextView
            style="@style/TextAppearance.Ticwear.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:singleLine="true"
            android:text="@string/spec_text_size_material"
            />

        <include
            layout="@layout/dialog_spec_text_material_size" />


    </LinearLayout>

</ScrollView>